# src/main/java/com/vascobancopagamento/vascobancopagamentoarti/model/ExtratoBoleto.java
@@ -1,7 +1,5 @@
 package com.vascobancopagamento.vascobancopagamentoarti.model;
 
-import java.time.LocalDateTime;
-
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -11,7 +9,8 @@ import lombok.Setter;
 @NoArgsConstructor
 @Getter
 @Setter
-public class Boleto {
+public class ExtratoBoleto {
+    private Integer idConta;
     private Integer id;
     private String numero;
     private double valorCobrado;
@@ -24,13 +23,5 @@ public class Boleto {
     private String instrucoes;
     private String codigoBarras;
     private String datapagamento;
-
-    public static Boleto boletoAleatorio() {
-        return new Boleto(1, "9378727", 50.00, 52.00, 2.00, false, "29/06/2018",
-                "Vasco Banco LTDA", "70.342.343/0001-74",
-                "Pagavel em qualquer banco ate a data de vencimento", "238047283047238474343444434534534545454454522",
-                LocalDateTime.now().toString());
-
-    }
-
+    
 }
